# process-priority-manager

./: Cargo.toml  README.md  process_config.json
.github/workflows/: create_release.yml  rust.yml
src/: config.rs  main.rs
src/windows_process/: process.rs
