[package]
name = "process-priority-manager-rust"
version = "0.1.0"
authors = ["conor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "handleapi", "tlhelp32", "winbase", "processthreadsapi"] }